--- a/src/github-markdown-light.css
+++ b/src/github-markdown-light.css
@@ -6,8 +6,8 @@
     margin: 0;
     color: #1f2328;
     background-color: #ffffff;
-    font-family: "LXGW WenKai", -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 16px;
+    font-family: var(--fontStack-sansSerif);
+    font-size: 17px;
     line-height: 1.5;
     word-wrap: break-word;
 }
@@ -112,9 +112,21 @@
 .markdown-body kbd,
 .markdown-body pre,
 .markdown-body samp {
-    font-family: monospace;
+    font-family: var(--fontStack-mono);
     font-size: 1em;
 }
+
+@media (max-width: 768px) {
+
+    .markdown-body code,
+    .markdown-body kbd,
+    .markdown-body pre,
+    .markdown-body samp {
+        font-family: var(--fontStack-mono-mobile);
+    }
+
+}
+
 
 .markdown-body figure {
     margin: 1em 2.5rem;
@@ -315,6 +327,16 @@
     border-left: .25em solid #d1d9e0;
 }
 
+/* custom */
+
+.markdown-body ul {
+    list-style-type: disc;
+}
+
+.markdown-body ol {
+    list-style-type: decimal;
+}
+
 .markdown-body ul,
 .markdown-body ol {
     margin-top: 0;
@@ -341,16 +363,32 @@
 .markdown-body tt,
 .markdown-body code,
 .markdown-body samp {
-    font-family: ui-monospace, "LXGW WenKai" SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+    font-family: var(--fontStack-mono);
     font-size: 12px;
+}
+
+@media (max-width: 768px) {
+
+    .markdown-body tt,
+    .markdown-body code,
+    .markdown-body samp {
+        font-family: var(--fontStack-mono-mobile);
+    }
+
 }
 
 .markdown-body pre {
     margin-top: 0;
     margin-bottom: 0;
-    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+    font-family: var(--fontStack-mono);
     font-size: 12px;
     word-wrap: normal;
+}
+
+@media (max-width: 768px) {
+    .markdown-body pre {
+        font-family: var(--fontStack-mono-mobile);
+    }
 }
 
 .markdown-body .octicon {
@@ -831,7 +869,7 @@
 }
 
 .markdown-body .footnotes .data-footnote-backref g-emoji {
-    font-family: monospace;
+    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .markdown-body body:has(:modal) {
